projects/compiler/test/typechecker/indexing/string_error_range_nullable.2.out
Error at %FILE_NAME%:3:7
Type mismatch
  |  str[1:a]
           ^
Expected: Int
but instead found: Int?
