projects/compiler/test/typechecker/indexing/string_error_range_nullable.2.abra
val str = "abcd"
val a: Int? = Some(1)
str[1:a]